# research-agent-with-langfuse-tracing

./: .gitignore  =0.2.0  README.md  main.py  pyproject.toml
agent/: email_agent.py  graph.py  nodes.py  prompt_client.py  prompts.py  research_graph.py  state.py
api/: models.py  router.py
scripts/: setup_prompts.py  test_langfuse_conneciton.py
tests/: test_api.py  test_graph.py  test_nodes.py  test_prompt_client.py  test_setup_prompts.py
tools/: search.py
